feat: add bottom distance hysteresis in config API
